# Python_TelegramBot_Melikhov

./: .gitignore  README.md  pyproject.toml  requiremnts.txt
app/: calendars.py  note_actions.py  note_handlers.py
settings/: config.py
